syntax = "proto3";

package proto;

option go_package = "github.com/cristiancll/qrpay-be/proto";

import "google/protobuf/timestamp.proto";

import "user.proto";
import "sale.proto";


message Retrieval {
  string uuid = 1;
  User user = 2;
  User seller = 3;
  SaleItem sale_item = 4;
  bool delivered = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

service RetrievalService {
  rpc Create(RetrievalCreateRequest) returns (RetrievalCreateResponse);
  rpc Get(RetrievalGetRequest) returns (RetrievalGetResponse);
  rpc List(RetrievalListRequest) returns (RetrievalListResponse);
  rpc Update(RetrievalUpdateRequest) returns (RetrievalUpdateResponse);
  rpc Delete(RetrievalDeleteRequest) returns (RetrievalDeleteResponse);
}

message RetrievalCreateRequest {
  string userUUID = 1;
  repeated string saleItemUUIDs = 2;
}
message RetrievalCreateResponse {}

message RetrievalGetRequest {
  string uuid = 1;
}

message RetrievalGetResponse {
  Retrieval retrieval = 1;
}

message RetrievalListRequest {}

message RetrievalListResponse {
  repeated Retrieval retrievals = 1;
}

message RetrievalUpdateRequest {
  string uuid = 1;
  bool delivered = 2;
}

message RetrievalUpdateResponse {
  Retrieval retrieval = 1;
}

message RetrievalDeleteRequest {
  string uuid = 1;
}

message RetrievalDeleteResponse {}
